# cndrvcups-common

./: .gitignore  LICENSE-common-2.90DE.txt  LICENSE-common-2.90FR.txt  LICENSE-common-2.90IT.txt  LICENSE-common-2.90J.txt  LICENSE-common-2.90SP.txt  Makefile.am  README.md  cndrvcups-common.spec  confdefs.h  configure.ac
backend/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  configure.ac
backend/.deps/: cnusb.Po
buftool/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
buftool/.deps/: buflist.Po  buftool.Po
c3plmod_ipc/: Makefile.am  configure.ac
cngplp/: Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
cngplp/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
cngplp/cnjatool/: Makefile  Makefile.am  Makefile.in
cngplp/po/: Makefile  Makefile.am  Makefile.in  fr.gmo  it.gmo  ja.gmo
cngplp/src/: Makefile  Makefile.am  Makefile.in
cngplp/src/.deps/: load.Po  main.Po  mainwnd.Po  printerinfo.Po
debian/: changelog  cndrvcups-common.substvars  control  copyright  docs  files  rules
debian/cndrvcups-common/DEBIAN/: control  md5sums  shlibs
debian/cndrvcups-common/usr/lib/: libColorGear.so.0  libColorGear.so.0.0.0  libColorGearC.so.0  libColorGearC.so.0.0.0  libc3pl.so.0  libc3pl.so.0.0.1
debian/cndrvcups-common/usr/lib/cups/backend/: cnusb
debian/cndrvcups-common/usr/share/locale/de/LC_MESSAGES/: cngplp.mo
debian/cndrvcups-common/usr/share/locale/es/LC_MESSAGES/: cngplp.mo
